kube/services/laravel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    apiVersion: v1
    kind: Pod
    metadata:
      name: laravel
      namespace: default
      labels:
        app: laravel
    spec:
      containers:
        -
          name: laravel
          image: laravel
          imagePullPolicy: IfNotPresent
          ports:
            -
              name: http
              protocol: TCP
              containerPort: 80
