kube/services/laravel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
  namespace: default
spec:
  type: NodePort
  ports:
    -
      name: http
      port: 80
      targetPort: 80
  selector:
    app: laravel
