kube/services/laravel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel
  annotations:
    -
      ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
    -
      http:
        paths:
          -
            path: /
            pathType: Prefix
            backend:
              service:
                name: laravel
                port:
                  number: 80
